# trem

./: .gitignore  .gitmodules  CMakeLists.txt
assets/: config.json
scripts/: build.sh  debug-build.sh
src/: constants.h  game.cpp  game.h  main.cpp  test_game.h
src/components/: SpriteComponent.cpp  SpriteComponent.h  transform.cpp  transform.h  transform.hpp
src/core/: Engine.cpp  Engine.h  asset_manager.cpp  asset_manager.h  color.cpp  color.h  component.h  entity.cpp  entity.hpp  entity_manager.cpp  entity_manager.hpp  screen.cpp  screen.h  screenBuffer.cpp  screenBuffer.h  texture_manager.cpp  texture_manager.h
src/core/shapes/: line2d.cpp  line2d.h
src/utils/: utils.cpp  utils.h  vector2d.cpp  vector2d.h
